--- a/index.html
+++ b/index.html
@@ -33,26 +33,30 @@
                             More...
                         </li>
                     </ul>
-                </nav>    
+                </nav>
                 <div class="title">
                     <i class="fas fa-bars"></i>
                     <h1>
                         The History Teller
                     </h1>
                 </div>
-                <div class="bnews">
-                    <h2>
+                   <h2>
                         Breaking News
-                    </h2>
-                    <ul>
-                        <li>Trump, Biden visit key battleground states ahead of election</li>
-                        <li>COVID-19 cases soar in all but 8 U.S. states</li>
-                        <li>McConnell announces Senate will vote next week on GOP-crafted COVID-19 relief bill</li>
-                    </ul>                        
+                   </h2>
+                <div class="bnews">
+                    <div>
+                        Trump, Biden visit key battleground states ahead of election
+                    </div>
+                    <div>
+                        COVID-19 cases soar in all but 8 U.S. states
+                    </div>
+                    <div>
+                        McConnell announces Senate will vote next week on GOP-crafted COVID-19 relief bill
+                    </div>                        
                 </div>    
-            </header>
+            </header>         
+            <h2>Latest News</h2>
             <article id="main-articles">
-                <h2>Latest News</h2>
                 <div>
                     <img src="images/covid19.jpg">
                     <h3>
