--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             <title>
                 The History Teller | www.tht.com
             </title>
+            <link href="reset.css" type="text/css">
             <link href="style.css" rel="stylesheet" type="text/css">
             <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         </head>
