--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
             <title>
                 The History Teller | www.tht.com
             </title>
-            <link href="css/reset.css" type="text/css">
-            <link href="css/style.css" rel="stylesheet" type="text/css">
+            <link href="./css/reset.css" type="text/css">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link href="./css/style.css" rel="stylesheet" type="text/css">
             <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         </head>
         <body>
-            <header class="main-news">
+            <header>
                 <nav class="navbar">
                     <ul>
                         <li>
@@ -41,22 +42,31 @@
                         The History Teller
                     </h1>
                 </div>
-                   <h2>
-                        Breaking News
-                   </h2>
                 <div class="bnews">
                     <div>
-                        Trump, Biden visit key battleground states ahead of election
+                        <h4>TRUMP MIDWEST MUST-WINS HAMMERED BY COVID</h4>
+                        <img src="./images/thedonald.webp">
                     </div>
-                    <div>
-                        COVID-19 cases soar in all but 8 U.S. states
-                    </div>
-                    <div>
-                        McConnell announces Senate will vote next week on GOP-crafted COVID-19 relief bill
+                    <div class="sidebar">
+                        <h2>
+                            Breaking News
+                        </h2>
+                        <div>
+                            Trump, Biden visit key battleground states ahead of election
+                        </div>
+                        <div>
+                            COVID-19 cases soar in all but 8 U.S. states
+                        </div>
+                        <div>
+                            McConnell announces Senate will vote next week on GOP-crafted COVID-19 relief bill
+                        </div>
+                        <div>
+                            New Study Suggests COVID-19 May Age Some Patients' Brains By 10 Years
+                        </div>
                     </div>                        
                 </div>    
             </header>         
-            <h2>Latest News</h2>
+            <h3>Latest News</h3>
             <article id="main-articles">
                 <div>
                     <img src="images/covid19.jpg">
@@ -117,17 +127,7 @@
                         Former Chicago Police Superintendent Eddie Johnson was accused of sexual harassment and assault on Thursday in a lawsuit filed by an officer who says she served as his personal driver. The lawsuit accuses Johnson, who was the highest ranking member of the department at the time, of "shockingly violent, abusive, and harassing conduct" that included multiple instances of forced oral and vaginal sex. 
                     </p>
                     <span>15h ago</span>
-                </div>
-                <div>
-                    <img src="images/nflcovid-640x360.jpg">
-                    <h3>
-                        Indianapolis Colts say coronavirus tests came back negative after retesting
-                    </h3>
-                    <p>
-                        Four people in the Indianapolis Colts organization initially tested positive for the coronavirus, the team announced Friday. Their samples were retested, and the tests came back negative, the team said in a statement.
-                    </p>
-                    <span>15h ago</span>
-                </div>  
+                </div> 
             </article>
             <form class="suscription">
                 <Label>Suscribe our Newsletter</Label>
