Validation for each field

--- a/susc.html
+++ b/susc.html
@@ -3,80 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Suscription | www.tht.com</title>
+    <link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
-        <h1>
-            Suscription
-        </h1>
-    </header>
-    <section>
         <div class="container">
+            <h1>
+                Suscription
+            </h1>
             <form class="form">
                 <div id = 'name-container'>
                     <label>
                         Name and Surname
                     </label>
-                    <br>
-                    <input id='name'>
+                    <input id='name' placeholder="Complete Name">
+                    <small>The input has less letters than required</small>
                 </div>
-                <p>The input has less letters than required</p>
-                <p>The input is not a name</p>
-                <div>                
-                <label id='Email'>
-                    Email
-                </label>
-                <input value='E-mail' type="email">
+                <div id='email-container'>               
+                    <label>
+                        Email
+                    </label>
+                    <input id='email' placeholder='E-mail' type='email'>
+                    <small>The input is not a mail address</small>
                 </div>
-                <p>The input is not a mail address</p>
-                <div>
-                <label id='password'>
-                    Password
-                </label>
-                <input value='Password' type="password">
+                <div id='pass-container'>
+                    <label>
+                        Password
+                    </label>
+                    <input  id='password' placeholder='Password' type="password">
+                    <small>the password it's too week</small>
                 </div>
-                <p> the password it's imcomplete
-                </p>
-                <p> the password it's too week</p>
-                <div>
-                <label id='Age'>
-                    Age
-                </label>
-                <input value='Age'>
+                <div id='age-container'>
+                    <label>
+                        Age
+                    </label>
+                    <input id='age' placeholder='Age'>
+                    <small>You must be at least 18 YO</small>
                 </div>
-                <label id='phone-number'>
-                    Phone Number
-                </label>
-                <br>
-                <input value='Phone' type="phone">
-                <br>
-                <label id='address'>
-                    Address
-                </label>
-                <br>
-                <input value='Address' type="text">
-                <br>
-                <label id='city'>
-                    City
-                </label>
-                <br>
-                <input value='City Location' value="text">
-                <br>
-                <label id='pc'>
-                    Postal Code
-                </label>
-                <br>
-                <input value='postal-code' type="number">
-                <br>
-                <label id='id-number'>
-                    ID Number
-                </label>
-                <input value="ID" type="number">
-                <input id='button' type="submit">
+                <div id='phone-container'>
+                    <label>
+                        Phone Number
+                    </label>
+                    <input id='phone-number' placeholder='Phone' type="phone">
+                <small>Please, enter a Phone Number</small>
+                </div>
+                <div id = 'address-container'>
+                    <label>
+                        Address
+                    </label>
+                    <input id='address' placeholder='Address' >
+                    <small>Error</small>
+                </div>
+                <div id='city-container'>
+                    <label>
+                        City
+                    </label>
+                    <input id='city' placeholder='City Location'>
+                    <small>Error</small>
+                </div>
+                <div id='pc-container'>
+                    <label>
+                        Postal Code
+                    </label>
+                    <input id='pc' placeholder='postal-code'>
+                </div>
+                <div id='id-container'>
+                    <label>
+                        ID Number
+                    </label>
+                    <input placeholder="ID" id='id-number'>
+                    <small>Error</small>
+                </div>
+                <a id='button'>Submit</a>
             </form>
         </div>
-    </section>
+    </header>
     <script src="main.js"></script>
 </body>
 </html>
